# pain-compiler

./: .gitignore  Cargo.toml  build.rs
benches/: README.md  factorial.rs  fibonacci.rs  pml_parser.rs  sum.rs
resources/icons/windows/: pain.rc
src/: ast.rs  codegen.rs  doc_generator.rs  error.rs  formatter.rs  interpreter.rs  ir.rs  ir_builder.rs  jit.rs  jit_orc.rs  lexer.rs  lib.rs  llvm_tools.rs  main.rs  mlir_codegen.rs  optimizations.rs  pml.rs  pml_lexer.rs  pml_parser.rs  span.rs  stdlib.rs  stdlib_runtime.c  type_checker.rs  warnings.rs
src/parser/: mod.rs
tests/: full_pipeline_integration.rs  integration_test.rs  performance_regression.rs  property_tests.rs
