[package]
name = "pain-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "pain_compiler"
path = "src/lib.rs"

[[bin]]
name = "pain-compiler"
path = "src/main.rs"

[dependencies]
# Parser
logos.workspace = true

# Utilities
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true

# Runtime (for interpreter)
pain-runtime = { path = "../pain-runtime" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "factorial"
harness = false
