[package]
name = "pain-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "pain_compiler"
path = "src/lib.rs"

[[bin]]
name = "pain-compiler"
path = "src/main.rs"

[dependencies]
# Parser
logos.workspace = true

# Utilities
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
rustyline.workspace = true

# Runtime (for interpreter)
pain-runtime = { path = "../pain-runtime" }

# LLVM JIT (optional feature, requires LLVM 21+ installation)
# To enable: cargo build --features jit
# Note: Requires LLVM_SYS_211_PREFIX environment variable set to LLVM installation path
[features]
default = []
jit = ["llvm-sys", "libloading"]

[dependencies.llvm-sys]
version = "211"
optional = true

[dependencies.libloading]
version = "0.8"
optional = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "factorial"
harness = false
