[package]
name = "pain-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "pain_compiler"
path = "src/lib.rs"

[[bin]]
name = "pain"
path = "src/main.rs"

[dependencies]
# Parser
logos.workspace = true

# Utilities
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
rustyline.workspace = true

# Runtime (for interpreter)
pain-runtime = { path = "../pain-runtime" }

# Standard library dependencies
regex = "1.10"
serde_json = "1.0"

# File system glob patterns
glob = "0.3"

# LLVM JIT (optional feature, requires LLVM 21+ installation)
# To enable: cargo build --features jit
# Note: Requires LLVM_SYS_211_PREFIX environment variable set to LLVM installation path
[features]
default = []
jit = ["llvm-sys", "libloading"]

[dependencies.llvm-sys]
version = "211"
optional = true

[dependencies.libloading]
version = "0.8"
optional = true

[build-dependencies]
# Windows icon embedding
winres = "0.1"

[dev-dependencies]
criterion.workspace = true
proptest = "1.4"

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "pml_parser"
harness = false
